LinuxSDK/inc/UVSMedia.h

#define UVS_OK 0
typedef void* uvsobj_handle;
typedef enum {
	uvs_dev_run,
	uvs_dev_stop
} uvs_dev_state_e;
typedef enum {
	uvs_video_brightness,
	uvs_video_contrast,
	uvs_video_hue,
	uvs_video_saturation,
	uvs_video_sharpness,
	uvs_video_gamma,
	uvs_video_gain
} uvs_video_effect_e;
typedef enum {
	uvs_audio_codec_none,
	uvs_audio_codec_MP3,
	uvs_audio_codec_AAC
} uvs_audio_codec_e;
typedef enum {
	uvs_video_codec_none,
	uvs_video_codec_hw_h264,
	uvs_video_codec_hw_h265,
	uvs_video_codec_hw_jpeg,
	uvs_video_codec_intel_h264,
	uvs_video_codec_intel_h265,
	uvs_video_codec_intel_jpeg,
	uvs_video_codec_nvidia_h264,
	uvs_video_codec_nvidia_h265,
	uvs_video_codec_sw_h264,
	uvs_video_codec_sw_x264
} uvs_video_codec_e;
typedef struct {
	uvs_target_usage_e targetUsage;
	uvs_codec_profile_e codecProfile;
	uvs_avc_entropy_e entropyCoding; // AVC(h264) entropy coding mode
	uvs_scale_usage_e scaleUsage;
	int scaleWidth; // destination picture width
	int scaleHeight; // destination picture height
	int cropLeft;
	int cropTop;
	int cropWidth;
	int cropHeight;
	float frameRate;
	uvs_video_rcmode_e rcMode;
	int encBitRate; // kbit/sec
	int maxBitRate; // kbit/sec
	int encQuality; // encoder quality
	int GOPLength;
} uvs_encode_config_t;
typedef struct {
	int inputFrames;
	int encodeFrames;
	float inputFrameRate;
	float encodeFrameRate;
} uvs_encode_status_t;
typedef struct {
	uvs_frame_type_e frameType;
	int audioChannels;
	int samplesPerSec;
	int bitsPerSample;
} uvs_audio_format_t;
typedef struct {
	uvs_frame_type_e frameType;
	int videoWidth;
	int videoHeight;
	float frameRate;
} uvs_video_format_t;
typedef struct {
	uvs_frame_type_e frameType;
	union
	{
		uint16_t videoWidth;
		uint16_t audioChannels;
	};
	union
	{
		uint16_t videoHeight;
		uint16_t audioBitsPerSample;
	};
	union
	{
		uint16_t videoDataStride[2];
		uint32_t audioSamplesPerSec;
	};
	uint32_t frameDataLen;
	int64_t timeStamp;
	uint8_t *frameData;
} uvs_frame_info_t;
typedef struct {
	uvs_frame_type_e frameType;
	bool bMirror;
	bool bFlip;
	int cropLeft;
	int cropTop;
	int cropWidth;
	int cropHeight;
	int scaleWidth;
	int scaleHeight;
	uvs_scale_usage_e scaleUsage;
	uvs_rotate_mode_e rotateMode;
} uvs_frame_convert_t;
typedef struct {
	char szFriendlyDevName[UVS_NAME_LEN];
} uvs_dev_info_t;
typedef enum {
	uvs_dev_video_capture,
	uvs_dev_audio_capture,
	uvs_dev_audio_renderer
} uvs_dev_type_e;
typedef struct {
	char szURL[UVS_URL_LEN];
} uvs_url_t;
typedef void (*pUVSFrameCallback)(uvsobj_handle obj, const uvs_frame_info_t *frame, void *pUserData);
typedef struct {
	const char *ipAddress;
	uint16_t ipPort;
} uvs_rtp_multicast_t;
typedef struct {
	uvs_audio_codec_e audioCodec;
	uvs_video_codec_e videoCodec;
	int audioDuration; /* audio track duration in milliseconds */
	int videoDuration; /* video track duration in milliseconds */
	int videoWidth;
	int videoHeight;
	float videoFrameRate;
} uvs_mp4_file_status_t;
typedef struct {
	uvs_font_info_t textFont;
	int x, y;
	int width, height;
	int imageOpacity;
	const char *szTitleImageFile;
	const char *szTitleText;
} uvs_mp4_file_title_t;
int uvs_media_init(int flags);
void uvs_media_exit(void);
int uvs_enum_device(uvs_dev_type_e devType, uvs_dev_info_t devInfo[], int *devNum);
uvsobj_handle uvs_dev_open(const uvs_dev_info_t *devInfo, int *result);
int uvs_dev_close(uvsobj_handle obj);
int uvs_get_dev_info(uvsobj_handle obj, uvs_dev_info_t *devInfo);
int uvs_enum_audio_format(uvsobj_handle obj, uvs_audio_format_t formats[], int *formatNum);
int uvs_enum_video_format(uvsobj_handle obj, uvs_video_format_t formats[], int *formatNum);
int uvs_set_audio_device(uvsobj_handle obj, uvs_dev_type_e devType, const uvs_dev_info_t *devInfo);
int uvs_dev_control(uvsobj_handle obj, uvs_dev_state_e state);
int uvs_get_audio_property(uvsobj_handle obj, uvs_audio_format_t *format, uvs_audio_codec_e *audioCodec);
int uvs_set_audio_property(uvsobj_handle obj, const uvs_audio_format_t *format, uvs_audio_codec_e audioCodec);
int uvs_set_audio_mute(uvsobj_handle obj, bool bMute);
int uvs_get_audio_volume(uvsobj_handle obj, int *volume);
int uvs_set_audio_volume(uvsobj_handle obj, int volume);
int uvs_get_audio_balance(uvsobj_handle obj, int *balance);
int uvs_set_audio_balance(uvsobj_handle obj, int balance);
int uvs_get_video_effect_range(uvsobj_handle obj, uvs_video_effect_e effect, int *minVal, int *maxVal, int *stepDelta, int *defaultVal);
int uvs_get_video_effect(uvsobj_handle obj, uvs_video_effect_e effect, int *param);
int uvs_set_video_effect(uvsobj_handle obj, uvs_video_effect_e effect, int param);
int uvs_get_video_property(uvsobj_handle obj, uvs_video_format_t *format);
int uvs_get_video_mirror(uvsobj_handle obj, bool *horizMirror, bool *vertMirror);
int uvs_set_video_mirror(uvsobj_handle obj, bool horizMirror, bool vertMirror);
int uvs_get_video_status(uvsobj_handle obj, bool *videoSignal, bool *videoMode);
int uvs_set_video_encode_config(uvsobj_handle obj, int streamIndex, uvs_video_codec_e videoCodec, const uvs_encode_config_t *config);
int uvs_get_video_encode_config(uvsobj_handle obj, int streamIndex, uvs_video_codec_e *videoCodec, uvs_encode_config_t *config);
int uvs_start_encode(uvsobj_handle obj, int streamIndex);
int uvs_stop_encode(uvsobj_handle obj, int streamIndex);
int uvs_request_video_key_frame(uvsobj_handle obj, int streamIndex);
int uvs_get_video_encode_status(uvsobj_handle obj, int streamIndex, uvs_encode_status_t *info);
int uvs_set_audio_raw_frame_callback(uvsobj_handle obj, pUVSFrameCallback pCB, void *pUserData);
int uvs_set_audio_enc_frame_callback(uvsobj_handle obj, pUVSFrameCallback pCB, void *pUserData);
int uvs_lock_audio_raw_frame(uvsobj_handle obj, uvs_frame_info_t *info, uint32_t waitMilliSec);
int uvs_unlock_audio_raw_frame(uvsobj_handle obj);
int uvs_copy_audio_raw_frame(uvsobj_handle obj, uvs_frame_info_t *info, uint32_t waitMilliSec);
int uvs_media_server_rtsp_create(uint16_t rtspPort, uint16_t httpTunnerPort, const char *szUserName, const char *szPassword);
int uvs_media_server_rtsp_destroy(uint16_t rtspPort);
int uvs_media_stream_rtsp_start(uvsobj_handle obj, int streamIndex, uint16_t rtspPort, bool bHasAudio, const char *szSessionName, const uvs_rtp_multicast_t *rtpMulticast);
int uvs_media_stream_rtsp_stop(uvsobj_handle obj, int streamIndex);
int uvs_media_stream_rtsp_get_url(uvsobj_handle obj, int streamIndex, uvs_url_t *urlInfo);
int uvs_media_file_rtsp_start(const char *szFileName, uint16_t rtspPort, bool bHasAudio, const char *szSessionName);
int uvs_media_file_rtsp_stop(const char *szFileName);
int uvs_media_file_rtsp_get_url(const char *szFileName, uvs_url_t *urlInfo);
int uvs_media_stream_rtmp_send(uvsobj_handle obj, int streamIndex, const char *rtmpUrl, bool bHasAudio);
int uvs_media_stream_rtmp_stop(uvsobj_handle obj, int streamIndex);
int uvs_media_stream_rtmp_get_send_url(uvsobj_handle obj, int streamIndex, uvs_url_t *urlInfo);
int uvs_media_file_rtmp_send(const char *szFileName, const char *rtmpUrl, bool bHasAudio);
int uvs_media_file_rtmp_get_progress(const char *szFileName, int *progress);
int uvs_media_file_rtmp_stop(const char *szFileName);
int uvs_media_file_rtmp_get_send_url(const char *szFileName, uvs_url_t *urlInfo);
int uvs_media_stream_ndi_create(uvsobj_handle obj, const char *szSourceName, const char *szGroupName, const char *szXMLMetadata, bool bAsync);
int uvs_media_stream_ndi_config(uvsobj_handle obj, const uvs_frame_convert_t *frameConvert, int skipFrameRate);
int uvs_media_stream_ndi_start(uvsobj_handle obj, bool bHasAudio);
int uvs_media_stream_ndi_stop(uvsobj_handle obj);
int uvs_media_stream_ndi_destroy(uvsobj_handle obj);
int uvs_mp4_file_get_status(const char *szFileName, uvs_mp4_file_status_t *status);
int uvs_mp4_file_repair(const char *szFileName, const char *szOutputFile);
int uvs_mp4_file_repair_cancel(void);
int uvs_mp4_file_get_repair_progress(int *progress);
int uvs_mp4_file_cut(const char *szFileName, int beginMilliSec, int endMilliSec, const char *szOutputFile);
int uvs_mp4_file_get_cut_progress(int *progress);
int uvs_mp4_file_add_title(const char *szFileName, int beginMilliSec, const uvs_mp4_file_title_t title[], int titleNum, int titleMilliSec, const char *szOutputFile);
int uvs_mp4_file_get_title_progress(int *progress);
int uvs_mp4_file_merge(const char* const szFileName[], int fileNum, const char *szOutputFile);
int uvs_mp4_file_get_merge_progress(int *progress);