Delphi/UVSMedia.pas


function uvs_set_audio_raw_frame_callback(dev: UVSObj; cb: TFrameCallback;
  user: Pointer): Integer; stdcall; external uvsdll;
function uvs_set_audio_enc_frame_callback(dev: UVSObj; cb: TFrameCallback;
  user: Pointer): Integer; stdcall; external uvsdll;

function uvs_lock_audio_raw_frame(dev: UVSObj; var frame: TFrameInfo;
  waitMilliSec: LongWord): Integer; stdcall; external uvsdll;
function uvs_unlock_audio_raw_frame(dev: UVSObj): Integer; stdcall;
  external uvsdll;
function uvs_copy_audio_raw_frame(dev: UVSObj; var frame: TFrameInfo;
  waitMilliSec: LongWord): Integer; stdcall; external uvsdll;

function uvs_media_server_rtsp_create(rtspPort: Word; httpTunnerPort: Word;
  szUsername: PAnsiChar; szPassword: PAnsiChar): Integer; stdcall;
  external uvsdll;
function uvs_media_server_rtsp_destroy(rtspPort: Word): Integer; stdcall;
  external uvsdll;

function uvs_media_stream_rtsp_start(dev: UVSObj; streamIndex: Integer;
  rtspPort: Word; hasAudio: Bool; szSessionName: PAnsiChar;
  multicast: PRTPMulticast): Integer; stdcall; external uvsdll;
function uvs_media_stream_rtsp_stop(dev: UVSObj; streamIndex: Integer)
  : Integer; stdcall; external uvsdll;
function uvs_media_stream_rtsp_get_url(dev: UVSObj; streamIndex: Integer;
var url: TURLInfo): Integer; stdcall; external uvsdll;

function uvs_media_file_rtsp_start(szFilename: PAnsiChar; rtspPort: Word;
  hasAudio: Bool; szSessionName: PAnsiChar): Integer; stdcall;
  external uvsdll;
function uvs_media_file_rtsp_stop(szFilename: PAnsiChar): Integer; stdcall;
  external uvsdll;
function uvs_media_file_rtsp_get_url(szFilename: PAnsiChar; var url: TURLInfo)
  : Integer; stdcall; external uvsdll;

function uvs_media_stream_rtmp_send(dev: UVSObj; streamIndex: Integer;
  szURL: PAnsiChar; hasAudio: Bool): Integer; stdcall; external uvsdll;
function uvs_media_stream_rtmp_stop(dev: UVSObj; streamIndex: Integer)
  : Integer; stdcall; external uvsdll;
function uvs_media_stream_rtmp_get_send_url(dev: UVSObj; streamIndex: Integer;
  var url: TURLInfo): Integer; stdcall; external uvsdll;

function uvs_media_file_rtmp_send(szFilename: PAnsiChar; szURL: PAnsiChar;
  hasAudio: Bool): Integer; stdcall; external uvsdll;
function uvs_media_file_rtmp_get_progress(szFilename: PAnsiChar;
  var progress: Integer): Integer; stdcall; external uvsdll;
function uvs_media_file_rtmp_stop(szFilename: PAnsiChar): Integer; stdcall;
  external uvsdll;
function uvs_media_file_rtmp_get_send_url(szFilename: PAnsiChar; var url: TURLInfo)
  : Integer; stdcall; external uvsdll;

function uvs_media_stream_ndi_create(dev: UVSObj; szSourceName: PAnsiChar;
  szGroupName: PAnsiChar; szXMLMetaData: PAnsiChar; isAsync: Bool): Integer;
  stdcall; external uvsdll;
function uvs_media_stream_ndi_config(dev: UVSObj; convert: PFrameConvert;
  skipFrameRate: Integer): Integer; stdcall; external uvsdll;
function uvs_media_stream_ndi_start(dev: UVSObj; hasAudio: Bool): Integer;
  stdcall; external uvsdll;
function uvs_media_stream_ndi_stop(dev: UVSObj): Integer; stdcall;
  external uvsdll;
function uvs_media_stream_ndi_destroy(dev: UVSObj): Integer; stdcall;
  external uvsdll;

function uvs_mp4_file_get_status(szFilename: PAnsiChar; var status: TMP4FileStatus)
  : Integer; stdcall; external uvsdll;
function uvs_mp4_file_repair(szFilename: PAnsiChar; szNewFilename: PAnsiChar)
  : Integer; stdcall; external uvsdll;
function uvs_mp4_file_repair_cancel: Integer; stdcall; external uvsdll;
function uvs_mp4_file_get_repair_progress(var progress: Integer): Integer;
  stdcall; external uvsdll;
function uvs_mp4_file_cut(szFilename: PAnsiChar; beginMilliSec: Integer;
  endMilliSec: Integer; szNewFilename: PAnsiChar): Integer; stdcall;
  external uvsdll;
function uvs_mp4_file_get_cut_progress(var progress: Integer): Integer; stdcall;
  external uvsdll;
function uvs_mp4_file_add_title(szFilename: PAnsiChar; beginMilliSec: Integer;
  title: PMP4FileTitle; num: Integer; titleMilliSec: Integer;
  szNewFilename: PAnsiChar): Integer; stdcall; external uvsdll;
function uvs_mp4_file_get_title_progress(var progress: Integer): Integer;
  stdcall; external uvsdll;
function uvs_mp4_file_merge(szFilename: PPAnsiChar; num: Integer;
  szNewFilename: PAnsiChar): Integer; stdcall; external uvsdll;
function uvs_mp4_file_get_merge_progress(var progress: Integer): Integer;
  stdcall; external uvsdll;

implementation

class function UVSDev.StrCopy(dest: PAnsiChar; const src: AnsiString): PAnsiChar;
begin
  Move(PAnsiChar(src)^, dest^, Length(src) + 1);
  Result := dest;
end;

constructor UVSDev.Create;
begin
  inherited;
  uvs_media_init(0);
end;

constructor UVSDev.Create(videoIndex: Integer; audioIndex: Integer;
  var ret: boolean);
begin
  Create;

  ret := DeviceOpen(videoIndex);
  if ret then
  begin
    if audioIndex >= 0 then
    begin
      ret := SetAudioDevice(dev_audio_capture, audioIndex);
    end;
  end;
end;

destructor UVSDev.Destroy;
begin
  DeviceClose;
  uvs_media_exit();
  inherited;
end;

function UVSDev.IsValid: boolean;
begin
  Result := Assigned(dev);
end;

function UVSDev.DeviceOpen(videoDevIndex: Integer): boolean;
var
  num: Integer;
  info: array [0 .. 15] of TDevInfo;
begin
  DeviceClose;

  if videoDevIndex >= 0 then
  begin
    num := Length(info);
    if uvs_enum_device(dev_video_capture, @info[0], num) = UVS_OK then
    begin
      if videoDevIndex < num then
      begin
        Result := DeviceOpen(info[videoDevIndex]);
        exit;
      end;
    end;
  end;
  Result := False;
end;

function UVSDev.DeviceOpen(var videoDevInfo: TDevInfo): boolean;
var
  r: Integer;
begin
  DeviceClose;
  dev := uvs_dev_open(videoDevInfo, r);
  Result := r = UVS_OK;
end;

procedure UVSDev.DeviceClose;
begin
  if IsValid then
  begin
    uvs_dev_close(dev);
    dev := nil;
  end;
end;

function UVSDev.GetDeviceInfo(var info: TDevInfo): boolean;
begin
  Result := uvs_get_dev_info(dev, info) = UVS_OK;
end;

function UVSDev.EnumAudioFormat(format: PAudioFormat; var num: Integer)
  : boolean;
begin
  Result := uvs_enum_audio_format(dev, format, num) = UVS_OK;
end;

function UVSDev.EnumVideoFormat(format: PVideoFormat; var num: Integer)
  : boolean;
begin
  Result := uvs_enum_video_format(dev, source_any, format, num) = UVS_OK;
end;

function UVSDev.SetAudioDevice(audioDev: DevType;
  audioDevIndex: Integer): boolean;
var
  num: Integer;
  info: array [0 .. 15] of TDevInfo;
begin
  if IsValid then
  begin
    num := Length(info);
    if uvs_enum_device(audioDev, @info[0], num) = UVS_OK then
    begin
      if (audioDevIndex >= 0) and (audioDevIndex < num) then
      begin
        Result := SetAudioDevice(audioDev, info[audioDevIndex]);
        exit;
      end;
    end;
  end;
  Result := False;
end;

function UVSDev.SetAudioDevice(audioDev: DevType;
  var audioDevInfo: TDevInfo): boolean;
begin
  Result := uvs_set_audio_device(dev, audioDev, audioDevInfo) = UVS_OK;
end;

function UVSDev.DeviceStart: boolean;
begin
  Result := uvs_dev_control(dev, dev_run) = UVS_OK;
end;

function UVSDev.DevicePause: boolean;
begin
  Result := uvs_dev_control(dev, dev_pause) = UVS_OK;
end;

function UVSDev.DeviceStop: boolean;
begin
  Result := uvs_dev_control(dev, dev_stop) = UVS_OK;
end;

function UVSDev.GetAudioProperty(format: PAudioFormat;
  var codec: AudioCodec): boolean;
begin
  Result := uvs_get_audio_property(dev, format, codec) = UVS_OK;
end;

function UVSDev.SetAudioProperty(codec: AudioCodec): boolean;
begin

  Result := uvs_set_audio_property(dev, nil, codec) = UVS_OK;
end;

function UVSDev.SetAudioMute(mute: boolean): boolean;
begin
  Result := uvs_set_audio_mute(dev, mute) = UVS_OK;
end;

function UVSDev.GetVolume: Integer;
var
  n: Integer;
begin
  if uvs_get_audio_volume(dev, n) = UVS_OK then
  begin
    Result := n;
  end
  else
  begin
    Result := 0;
  end;
end;

procedure UVSDev.SetVolume(n: Integer);
begin
  uvs_set_audio_volume(dev, n);
end;

function UVSDev.GetBalance: Integer;
var
  n: Integer;
begin
  if uvs_get_audio_balance(dev, n) = UVS_OK then
  begin
    Result := n;
  end
  else
  begin
    Result := 0;
  end;
end;

procedure UVSDev.SetBalance(n: Integer);
begin
  uvs_set_audio_balance(dev, n);
end;

function UVSDev.GetMirror: boolean;
var
  flags: array [0 .. 1] of Bool;
begin
  if uvs_get_video_mirror(dev, flags[0], flags[1]) = UVS_OK then
  begin
    Result := flags[0];
  end
  else
  begin
    Result := False;
  end;
end;

procedure UVSDev.SetMirror(n: boolean);
var
  flags: array [0 .. 1] of Bool;
begin
  flags[0] := n;
  flags[1] := flip;
  uvs_set_video_mirror(dev, flags[0], flags[1]);
end;

function UVSDev.GetFlip: boolean;
var
  flags: array [0 .. 1] of Bool;
begin
  if uvs_get_video_mirror(dev, flags[0], flags[1]) = UVS_OK then
  begin
    Result := flags[1];
  end
  else
  begin
    Result := False;
  end;
end;

procedure UVSDev.SetFlip(n: boolean);
var
  flags: array [0 .. 1] of Bool;
begin
  flags[0] := mirror;
  flags[1] := n;
  uvs_set_video_mirror(dev, flags[0], flags[1]);
end;

function UVSDev.GetVideoProperty(var format: TVideoFormat): boolean;
begin
  Result := uvs_get_video_property(dev, source_any, format) = UVS_OK;
end;

function UVSDev.GetVideoStatus(var signal: Boolean; var mode: Boolean): boolean;
var
  flags: array [0 .. 1] of Bool;
begin
  Result := uvs_get_video_status(dev, flags[0], flags[1]) = UVS_OK;
  if Result then
  begin
    signal := flags[0];
    mode := flags[1];
  end
  else
  begin
    signal := False;
    mode := False;
  end;
end;

function UVSDev.GetEffectRange(effect: VideoEffect; var minVal: Integer;
  var maxVal: Integer; var stepVal: Integer; var defaultVal: Integer): boolean;
begin
  Result := uvs_get_video_effect_range(dev, effect, minVal, maxVal, stepVal,
    defaultVal) = UVS_OK;
end;

function UVSDev.GetBrightness: Integer;
var
  n: Integer;
begin
  if uvs_get_video_effect(dev, video_brightness, n) = UVS_OK then
  begin
    Result := n;
  end
  else
  begin
    Result := 0;
  end;
end;

procedure UVSDev.SetBrightness(n: Integer);
begin
  uvs_set_video_effect(dev, video_brightness, n);
end;

function UVSDev.GetContrast: Integer;
var
  n: Integer;
begin
  if uvs_get_video_effect(dev, video_contrast, n) = UVS_OK then
  begin
    Result := n;
  end
  else
  begin
    Result := 0;
  end;
end;

procedure UVSDev.SetContrast(n: Integer);
begin
  uvs_set_video_effect(dev, video_contrast, n);
end;

function UVSDev.GetSaturation: Integer;
var
  n: Integer;
begin
  if uvs_get_video_effect(dev, video_saturation, n) = UVS_OK then
  begin
    Result := n;
  end
  else
  begin
    Result := 0;
  end;
end;

procedure UVSDev.SetSaturation(n: Integer);
begin
  uvs_set_video_effect(dev, video_saturation, n);
end;

function UVSDev.GetGamma: Integer;
var
  n: Integer;
begin
  if uvs_get_video_effect(dev, video_gamma, n) = UVS_OK then
  begin
    Result := n;
  end
  else
  begin
    Result := 0;
  end;
end;

procedure UVSDev.SetGamma(n: Integer);
begin
  uvs_set_video_effect(dev, video_gamma, n);
end;

function UVSDev.GetVideoEncode(streamIndex: Integer; var codec: VideoCodec; var config: TEncodeConfig): boolean;
begin
   Result := uvs_get_video_encode_config(dev, streamIndex, codec, config) = UVS_OK;
end;

function UVSDev.SetVideoEncode(streamIndex: Integer; codec: VideoCodec; var config: TEncodeConfig): boolean;
begin
   Result := uvs_set_video_encode_config(dev, streamIndex, codec, config) = UVS_OK;
end;

function UVSDev.RequestKeyframe(streamIndex: Integer): boolean;
begin
  Result := uvs_request_video_key_frame(dev, streamIndex) = UVS_OK;
end;

function UVSDev.GetVideoEncodeStatus(streamIndex: Integer; var status: TEncodeStatus): boolean;
begin
   Result := uvs_get_video_encode_status(dev, streamIndex, status) = UVS_OK;
end;

function UVSDev.StartEncode(streamIndex: Integer): boolean;
begin
  Result := uvs_start_encode(dev, streamIndex) = UVS_OK;
end;

function UVSDev.StopEncode(streamIndex: Integer): boolean;
begin
  Result := uvs_stop_encode(dev, streamIndex) = UVS_OK;
end;
